<resources>
    <string name="app_name">Inventory</string>
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
    <string name="empty_view_subtitle_text">Get started by adding a product</string>
    <string name="sale_button">Sale</string>
    <string name="action_delete_all_entries">Delete all products</string>
    <string name="category_overview">Overview</string>
    <string name="hint_product_name">Product Name</string>
    <string name="hint_price">Price</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_supplier_name">Name</string>
    <string name="hint_supplier_phone">Phone Number</string>
    <string name="category_supplier">Supplier</string>
    <string name="unit_price">(Rs)</string>
    <string name="editor_activity_title_add_product">Add a Product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="cancel">Cancel</string>
    <string name="editor_insert_product_failed">Error with saving product</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="detail_activity_title">Details</string>
    <string name="detail_increment">+</string>
    <string name="detail_decrement">-</string>
    <string name="magnitude">x 1</string>
    <string name="contact_supplier">Contact</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="negative_quantity_msg">Quantity can\'t be negative</string>
    <string name="empty_fields_msg">Please enter all the fields</string>
</resources>
